<resources>
    <string name="app_name">AACA</string>
    <string name="back">Back</string>
    <string name="movie_name">"Avengers:\nEnd Game"</string>
    <string name="age">13+</string>
    <string name="tags">Action, Adventure, Fantasy</string>
    <string name="reviews">125 Reviews</string>
    <string name="storyline_head">Storyline</string>
    <string name="story">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.</string>
    <string name="cast">Cast</string>
    <string name="actor1_name">Robert Downey Jr.</string>
    <string name="actor2_name">Chris Evans</string>
    <string name="actor3_name">Mark Ruffalo</string>
    <string name="actor4_name">Chris Hemsworth</string>
</resources>